--- a/Envoy/envoy.yaml
+++ b/Envoy/envoy.yaml
@@ -41,6 +41,48 @@ static_resources:
                   cluster: tea_service
           http_filters:
           - name: envoy.filters.http.router
+  - name: listener_1
+    address:
+      socket_address:
+        protocol: TCP
+        address: 0.0.0.0
+        port_value: 10001
+    filter_chains:
+    - filters:
+      - name: envoy.filters.network.http_connection_manager
+        typed_config:
+          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
+          stat_prefix: ingress_http
+          route_config:
+            name: local_route
+            virtual_hosts:
+            - name: local_service
+              domains: ["*"]
+              routes:
+              - match:
+                  prefix: "/c"
+                route:
+                  # host_rewrite: www.google.com
+                  prefix_rewrite: "/coffee"
+                  # cluster: service_google
+                  cluster: coffee_service
+              - match:
+                  prefix: "/t"
+                route:
+                  # host_rewrite: www.google.com
+                  prefix_rewrite: "/tea"
+                  # cluster: service_google
+                  cluster: tea_service
+          http_filters:
+          - name: envoy.filters.http.router
+      # support HTTPS listener
+      tls_context:
+        common_tls_context:
+          tls_certificates:
+            - certificate_chain:
+                filename: "/etc/ssl/certs/https.crt"
+              private_key:
+                filename: "/etc/ssl/certs/key.pem"
   clusters:
   #- name: service_google
   - name: coffee_service
